# sumatra

./: .gitignore  .hg_archival.txt  .hgignore  .hgtags  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST.in  README  README.rst  TODO  distribute_setup.py  notes.txt  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: tests-win.yml  tests.yml
ci/: environment-test.yml  environment.yml  requirements-2.6.txt  requirements-2.7.txt  requirements-3.4.txt  requirements-3.6.txt  requirements-3.7.txt  requirements-3.8.txt  requirements-min.txt  requirements-test.txt  requirements.txt
doc/: Makefile  api_reference.txt  authors.txt  build_reference.py  command_line.txt  command_reference.txt  conf.py  developers_guide.txt  faq.txt  getting_started.txt  gui.txt  handling_data.txt  index.txt  installation.txt  introduction.txt  logo.xcf  managing_a_project.txt  migration.txt  parallel_computations.txt  parameter_files.txt  plugins.txt  publishing.txt  record_stores.txt  release_notes.txt  reporting.txt  support.txt  upgrading.txt  using_the_api.txt  using_the_api_example.py  using_the_api_example2.py  web_interface.txt
doc/_static/: custom.css
doc/exercises/: Makefile  docutils.tex  worksheet.txt
doc/reference/: datastore.txt  dependency_finder.txt  formatting.txt  launch.txt  launch.txt_  parameters.txt  programs.txt  projects.txt  records.txt  recordstore.txt  versioncontrol.txt
doc/releases/: 0.4.0.txt  0.5.0.txt  0.5.1.txt  0.5.3.txt  0.6.0.txt  0.7.0.txt  0.7.2.txt  0.7.3.txt  0.7.4.txt  0.8.0.txt  0.8.1.txt
src/: __init__.py  commands.py  compatibility.py  core.py  datastore.py  decorators.py  dependency_finder.py  find_version.py  formatting.py  launch.py  parameters.py  pfi.py  programs.py  projects.py  records.py  recordstore.py  smt  smtweb  tee.py  versioncontrol.py
src/datastore/: __init__.py  archivingfs.py  base.py  filesystem.py  mirroredfs.py
src/dependency_finder/: __init__.py  core.py  genesis.py  make.py  matlab.py  neuron.py  python.py
src/publishing/: utils.py
sumatra/: __init__.py  commands.py  compatibility.py  core.py  decorators.py  launch.py  parameters.py  pfi.py  programs.py  projects.py  records.py  tee.py  users.py
test/: build_example_project.py  build_fake_store.py  smt_test.py  smtweb_test.py
tools/: export.py
(+251 files in other folders)
